appservices/domain/istio-canary/istio-canary-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: istio-canary-canary
spec:
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: istio-canary

---
apiVersion: v1
kind: Service
metadata:
  name: istio-canary-stable
spec:
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: istio-canary
